--- a/Node/Dockerfile
+++ b/Node/Dockerfile
@@ -1,9 +1,13 @@
-FROM node:15-alpine
+FROM node:15
 
 WORKDIR /usr/src/app
 
-COPY  . .
+RUN apt-get install -y wget
 
-RUN npm install
+ENV DOCKERIZE_VERSION v0.6.1
+
+RUN wget -O - https://github.com/jwilder/dockerize/releases/download/$DOCKERIZE_VERSION/dockerize-linux-amd64-$DOCKERIZE_VERSION.tar.gz | tar xzf - -C /usr/local/bin \
+    && apt-get autoremove -yqq --purge wget && rm -rf /var/lib/apt/lists/*
+
 
 EXPOSE 3000
